# screenkey

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  PUBLISHING.md  RELEASE.md  WORKFLOW_SUMMARY.md
.github/: PUBLISHING_SETUP.md  RELEASE.md  TESTING_RELEASE.md
.github/workflows/: ci.yml  publish-appimage.yml  publish-apt.yml  publish-aur.yml  publish-flatpak.yml  publish-rpm.yml  publish-snap.yml  release-simple.yml  release-test.yml  release.yml
screenkey-app/: .gitignore  README.md  index.html  package-lock.json  package.json  run-dev.sh
screenkey-app/scripts/: README.md  release.js
screenkey-app/src/: App.css  App.tsx  styles.css
screenkey-app/src-tauri/: Cargo.toml  tauri.conf.json
screenkey-app/src-tauri/capabilities/: main.json
screenkey-app/src-tauri/src/: main.rs
screenkey-app/src/components/: KeyDisplay.css  KeyDisplay.tsx
