[package]
name = "screenkey-app"
version = "0.0.8"
description = "A screencast tool to display keyboard inputs on screen"
authors = ["Rusman Wahab"]
license = "MIT"
repository = "https://github.com/rusmanplatd/screenkey"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"
